--- a/archives.html
+++ b/archives.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Archives - DevPad</title>
-        <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
-        <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
+        <link rel="stylesheet" href="https://xr09.github.io/theme/css/main.css" />
+        <link href="https://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
         <meta name="description" content="Linux, Python, Networking and more"/>
         <meta property="og:site_name" content="DevPad" />
@@ -19,13 +19,13 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://xr09.github.io/">DevPad  <strong>clean code, good karma</strong></a></h1>
+                <h1><a href="https://xr09.github.io/">DevPad  <strong>clean code, good karma</strong></a></h1>
                 <nav><ul>
 <!--                  -->
-                    <li><a href="http://xr09.github.io/pages/about.html">About</a></li>
-                    <li><a href="http://xr09.github.io/pages/projects.html">Projects</a></li>
-                <li><a href="http://xr09.github.io/archives.html">Archives</a></li>
-                <li><a href="http://xr09.github.io/tags.html">Tags</a></li>
+                    <li><a href="https://xr09.github.io/pages/about.html">About</a></li>
+                    <li><a href="https://xr09.github.io/pages/projects.html">Projects</a></li>
+                <li><a href="https://xr09.github.io/archives.html">Archives</a></li>
+                <li><a href="https://xr09.github.io/tags.html">Tags</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
@@ -34,46 +34,46 @@
 
 <dl>
     <dt>Tue 21 March 2017</dt>
-    <dd><a href="http://xr09.github.io/gitea-as-a-personal-git-ui.html">Gitea As A Personal Git Ui</a></dd>
+    <dd><a href="https://xr09.github.io/gitea-as-a-personal-git-ui.html">Gitea As A Personal Git Ui</a></dd>
     <dt>Tue 14 March 2017</dt>
-    <dd><a href="http://xr09.github.io/compiling-the-linux-kernel.html">Compiling The Linux Kernel</a></dd>
+    <dd><a href="https://xr09.github.io/compiling-the-linux-kernel.html">Compiling The Linux Kernel</a></dd>
     <dt>Thu 09 February 2017</dt>
-    <dd><a href="http://xr09.github.io/responsive-at-last.html">Responsive At Last</a></dd>
+    <dd><a href="https://xr09.github.io/responsive-at-last.html">Responsive At Last</a></dd>
     <dt>Tue 17 January 2017</dt>
-    <dd><a href="http://xr09.github.io/use-smart-solutions.html">Use Smart Solutions</a></dd>
+    <dd><a href="https://xr09.github.io/use-smart-solutions.html">Use Smart Solutions</a></dd>
     <dt>Thu 31 December 2015</dt>
-    <dd><a href="http://xr09.github.io/2015.html">2015</a></dd>
+    <dd><a href="https://xr09.github.io/2015.html">2015</a></dd>
     <dt>Tue 14 October 2014</dt>
-    <dd><a href="http://xr09.github.io/ferm-iptables-the-right-way.html">Ferm - IPtables The Right Way</a></dd>
+    <dd><a href="https://xr09.github.io/ferm-iptables-the-right-way.html">Ferm - IPtables The Right Way</a></dd>
     <dt>Fri 12 September 2014</dt>
-    <dd><a href="http://xr09.github.io/debian-repo-minimal-edition.html">Debian Repo - Minimal Edition</a></dd>
+    <dd><a href="https://xr09.github.io/debian-repo-minimal-edition.html">Debian Repo - Minimal Edition</a></dd>
     <dt>Wed 30 April 2014</dt>
-    <dd><a href="http://xr09.github.io/running-the-latest-debmirror-on-centos-5.html">Running The Latest Debmirror On CentOS 5</a></dd>
+    <dd><a href="https://xr09.github.io/running-the-latest-debmirror-on-centos-5.html">Running The Latest Debmirror On CentOS 5</a></dd>
     <dt>Wed 16 April 2014</dt>
-    <dd><a href="http://xr09.github.io/stripping-down-centos.html">Stripping Down Centos</a></dd>
+    <dd><a href="https://xr09.github.io/stripping-down-centos.html">Stripping Down Centos</a></dd>
     <dt>Tue 01 April 2014</dt>
-    <dd><a href="http://xr09.github.io/cron-scheduling-for-the-fancy.html">Cron Scheduling For The Fancy</a></dd>
+    <dd><a href="https://xr09.github.io/cron-scheduling-for-the-fancy.html">Cron Scheduling For The Fancy</a></dd>
     <dt>Fri 07 February 2014</dt>
-    <dd><a href="http://xr09.github.io/porting-twentytwelve.html">Porting TwentyTwelve</a></dd>
+    <dd><a href="https://xr09.github.io/porting-twentytwelve.html">Porting TwentyTwelve</a></dd>
     <dt>Fri 31 January 2014</dt>
-    <dd><a href="http://xr09.github.io/fast-git-clone.html">Fast Git Clone</a></dd>
+    <dd><a href="https://xr09.github.io/fast-git-clone.html">Fast Git Clone</a></dd>
     <dt>Wed 29 January 2014</dt>
-    <dd><a href="http://xr09.github.io/new-admin-in-town.html">New Admin In Town</a></dd>
+    <dd><a href="https://xr09.github.io/new-admin-in-town.html">New Admin In Town</a></dd>
     <dt>Wed 30 October 2013</dt>
-    <dd><a href="http://xr09.github.io/serving-static-folder-with-nginx.html">Serving Static Folder with NGINX</a></dd>
+    <dd><a href="https://xr09.github.io/serving-static-folder-with-nginx.html">Serving Static Folder with NGINX</a></dd>
     <dt>Fri 04 October 2013</dt>
-    <dd><a href="http://xr09.github.io/bash-rolodex.html">Bash Rolodex</a></dd>
+    <dd><a href="https://xr09.github.io/bash-rolodex.html">Bash Rolodex</a></dd>
     <dt>Thu 03 October 2013</dt>
-    <dd><a href="http://xr09.github.io/sed-is-unix.html">sed is unix</a></dd>
+    <dd><a href="https://xr09.github.io/sed-is-unix.html">sed is unix</a></dd>
     <dt>Tue 01 October 2013</dt>
-    <dd><a href="http://xr09.github.io/pelican-looks-great.html">Pelican looks great</a></dd>
+    <dd><a href="https://xr09.github.io/pelican-looks-great.html">Pelican looks great</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://www.twitter.com/xr09">Twitter</a></li>
                             <li><a href="https://github.com/xr09">Github</a></li>
