--- a/authors.html
+++ b/authors.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DevPad - Authors</title>
-        <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
-        <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
+        <link rel="stylesheet" href="https://xr09.github.io/theme/css/main.css" />
+        <link href="https://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
         <meta name="description" content="Linux, Python, Networking and more"/>
         <meta property="og:site_name" content="DevPad" />
@@ -19,26 +19,26 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://xr09.github.io/">DevPad  <strong>clean code, good karma</strong></a></h1>
+                <h1><a href="https://xr09.github.io/">DevPad  <strong>clean code, good karma</strong></a></h1>
                 <nav><ul>
 <!--                  -->
-                    <li><a href="http://xr09.github.io/pages/about.html">About</a></li>
-                    <li><a href="http://xr09.github.io/pages/projects.html">Projects</a></li>
-                <li><a href="http://xr09.github.io/archives.html">Archives</a></li>
-                <li><a href="http://xr09.github.io/tags.html">Tags</a></li>
+                    <li><a href="https://xr09.github.io/pages/about.html">About</a></li>
+                    <li><a href="https://xr09.github.io/pages/projects.html">Projects</a></li>
+                <li><a href="https://xr09.github.io/archives.html">Archives</a></li>
+                <li><a href="https://xr09.github.io/tags.html">Tags</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on DevPad</h1>        <li><a href="http://xr09.github.io/author/manuel-gutierrez.html">Manuel Gutierrez</a> (17)</li>
+    <h1>Authors on DevPad</h1>        <li><a href="https://xr09.github.io/author/manuel-gutierrez.html">Manuel Gutierrez</a> (17)</li>
 </section>
 
         <section id="extras" class="body">
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://www.twitter.com/xr09">Twitter</a></li>
                             <li><a href="https://github.com/xr09">Github</a></li>
