--- a/tags.html
+++ b/tags.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tags - DevPad</title>
-        <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
-        <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
+        <link rel="stylesheet" href="https://xr09.github.io/theme/css/main.css" />
+        <link href="https://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
         <meta name="description" content="Linux, Python, Networking and more"/>
         <meta property="og:site_name" content="DevPad" />
@@ -19,48 +19,48 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://xr09.github.io/">DevPad  <strong>clean code, good karma</strong></a></h1>
+                <h1><a href="https://xr09.github.io/">DevPad  <strong>clean code, good karma</strong></a></h1>
                 <nav><ul>
 <!--                  -->
-                    <li><a href="http://xr09.github.io/pages/about.html">About</a></li>
-                    <li><a href="http://xr09.github.io/pages/projects.html">Projects</a></li>
-                <li><a href="http://xr09.github.io/archives.html">Archives</a></li>
-                <li><a href="http://xr09.github.io/tags.html">Tags</a></li>
+                    <li><a href="https://xr09.github.io/pages/about.html">About</a></li>
+                    <li><a href="https://xr09.github.io/pages/projects.html">Projects</a></li>
+                <li><a href="https://xr09.github.io/archives.html">Archives</a></li>
+                <li><a href="https://xr09.github.io/tags.html">Tags</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for DevPad</h1>        <li><a href="http://xr09.github.io/tag/admin.html">admin</a> (3)</li>
-        <li><a href="http://xr09.github.io/tag/bash.html">bash</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/blog.html">blog</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/centos.html">centos</a> (2)</li>
-        <li><a href="http://xr09.github.io/tag/cron.html">cron</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/debian.html">debian</a> (3)</li>
-        <li><a href="http://xr09.github.io/tag/debmirror.html">debmirror</a> (2)</li>
-        <li><a href="http://xr09.github.io/tag/git.html">git</a> (2)</li>
-        <li><a href="http://xr09.github.io/tag/job.html">job</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/kernel.html">kernel</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/lifehack.html">lifehack</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/linux.html">linux</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/nginx.html">nginx</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/pelican.html">pelican</a> (3)</li>
-        <li><a href="http://xr09.github.io/tag/performance.html">performance</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/perl.html">perl</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/repo.html">repo</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/sed.html">sed</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/static.html">static</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/tuning.html">tuning</a> (1)</li>
-        <li><a href="http://xr09.github.io/tag/ubuntu.html">ubuntu</a> (2)</li>
-        <li><a href="http://xr09.github.io/tag/unix.html">unix</a> (3)</li>
+    <h1>Tags for DevPad</h1>        <li><a href="https://xr09.github.io/tag/admin.html">admin</a> (3)</li>
+        <li><a href="https://xr09.github.io/tag/bash.html">bash</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/blog.html">blog</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/centos.html">centos</a> (2)</li>
+        <li><a href="https://xr09.github.io/tag/cron.html">cron</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/debian.html">debian</a> (3)</li>
+        <li><a href="https://xr09.github.io/tag/debmirror.html">debmirror</a> (2)</li>
+        <li><a href="https://xr09.github.io/tag/git.html">git</a> (2)</li>
+        <li><a href="https://xr09.github.io/tag/job.html">job</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/kernel.html">kernel</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/lifehack.html">lifehack</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/linux.html">linux</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/nginx.html">nginx</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/pelican.html">pelican</a> (3)</li>
+        <li><a href="https://xr09.github.io/tag/performance.html">performance</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/perl.html">perl</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/repo.html">repo</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/rolodex.html">rolodex</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/sed.html">sed</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/static.html">static</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/tuning.html">tuning</a> (1)</li>
+        <li><a href="https://xr09.github.io/tag/ubuntu.html">ubuntu</a> (2)</li>
+        <li><a href="https://xr09.github.io/tag/unix.html">unix</a> (3)</li>
 </section>
 
         <section id="extras" class="body">
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://www.twitter.com/xr09">Twitter</a></li>
                             <li><a href="https://github.com/xr09">Github</a></li>
