--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projects - DevPad </title>
-        <link rel="stylesheet" href="https://xr09.github.io/theme/css/main.css" />
+        <link rel="stylesheet" href="https://xr09.github.io/theme/css/all.min.css" />
         <link href="https://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
         <meta name="description" content="Linux, Python & "/>
