--- a/sed-is-unix.html
+++ b/sed-is-unix.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>sed is unix - DevPad </title>
-        <link rel="stylesheet" href="https://xr09.github.io/theme/css/main.css" />
+        <link rel="stylesheet" href="https://xr09.github.io/theme/css/all.min.css" />
         <link href="https://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
 <link rel="canonical" href="https://xr09.github.io/sed-is-unix.html"/>
